# Temp-Repo-For-ECL

./: .gitignore  .gitmodules  CMakeLists.txt  Help.txt  generate-engine.bat
CMake/: Config.cmake.in  common.cmake  executable.cmake  external_project.cmake  packaging.cmake  project.cmake  unit_tests.cmake
CMake/generate/: editor.cmake  game.cmake
Source/EclipsedEngine/: CMakeLists.txt  EclipsedEngine.Core.hpp
Source/EclipsedEngine/public/EclipsedEngine/: DebugDrawer.h  DebugLogger.h  EclipsedRuntime.cpp  EclipsedRuntime.h  Networking.h  Profiler.h  TypeIDGenerator.cpp  TypeIDGenerator.h
Source/EclipsedEngine/public/EclipsedEngine/Components/: Component.h  ComponentForcelink.cpp  PlayerSpawner.h  Transform2D.cpp  Transform2D.h
Source/EclipsedEngine/public/EclipsedEngine/Components/Audio/: AudioBank.cpp  AudioBank.h  AudioEmitter.cpp  AudioEmitter.h  AudioEvent.cpp  AudioEvent.h  AudioListener.cpp  AudioListener.h
Source/EclipsedEngine/public/EclipsedEngine/Components/Physics/: BoxCollider.cpp  BoxCollider2D.h  CapsuleCollider2D.cpp  CapsuleCollider2D.h  CircleCollider2D.cpp  CircleCollider2D.h  Collider2D.cpp  Collider2D.h  PolygonCollider2D.cpp  PolygonCollider2D.h  RigidBody2D.cpp  RigidBody2D.h
Source/EclipsedEngine/public/EclipsedEngine/Components/Rendering/: BaseRenderComponent.h  Camera.cpp  Camera.h  SpriteRenderer2D.cpp  SpriteRenderer2D.h  SpriteSheetAnimator2D.cpp  SpriteSheetAnimator2D.h
Source/EclipsedEngine/public/EclipsedEngine/Components/Rendering/RenderCommands/: RenderSprite2DCommand.h
Source/EclipsedEngine/public/EclipsedEngine/Components/UI/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  RectTransform.cpp  RectTransform.h  TextRenderer.cpp  TextRenderer.h  UIImage.cpp  UIImage.h
Source/EclipsedEngine/public/EclipsedEngine/ECS/: ECS_Component.h  ObjectManager.cpp  ObjectManager.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/: ComponentInspectorDrawer.cpp  ComponentInspectorDrawer.h  ComponentInspectorDrawer.inl  Components.Inspector.cpp  EditorApplication.cpp  EditorApplication.h  EditorContext.cpp  EditorProjectManager.cpp  EditorProjectManager.h  EditorRuntime.cpp  EditorRuntime.h  EditorUIManager.cpp  EditorUIManager.h  PhysicsDebugDrawer.cpp  SelectionContext.cpp  SelectionContext.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/Common/: DragAndDrop.h  EditorActions.cpp  EditorActions.h  TextureIconManager.cpp  TextureIconManager.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/Game/: GameCompiler.cpp  GameCompiler.h  GameLoader.cpp  GameLoader.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/ImGui/: ImGui_Impl.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/Layout/: LayoutManager.cpp  LayoutManager.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/Windows/: AbstractContextMenu.cpp  AbstractContextMenu.h  EditorField.h  EditorFields.inl  WindowBase.h  WindowManager.cpp  WindowManager.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/Windows/WindowTypes/: ConsoleWindow.cpp  ConsoleWindow.h  GameWindow.cpp  GameWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InputEditorWindow.cpp  ProfilerWindow.cpp  ProfilerWindow.h  RenderingWindow.cpp  RenderingWindow.h  SceneWindow.cpp  SceneWindow.h  SettingsWindow.cpp  SettingsWindow.h  SpriteEditor.cpp  SpriteEditor.h  Window.cpp  Window.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/Windows/WindowTypes/AssetWindow/: AssetWindow.cpp  AssetWindow.h  AssetWindowContextMenu.cpp  AssetWindowContextMenu.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/Windows/WindowTypes/Inspector/: ITypeInspector.h  InspectableTarget.h  InspectorDispatcher.cpp  InspectorDispatcher.h  InspectorWindow.cpp  InspectorWindow.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/Windows/WindowTypes/Inspector/Assets/: AssetInspectorRegistry.cpp  AssetInspectorRegistry.h  AudioClipInspector.cpp  AudioClipInspector.h  FontInspector.cpp  FontInspector.h  MaterialInspector.cpp  MaterialInspector.h  PixelShaderInspector.cpp  PixelShaderInspector.h  PrefabInspector.cpp  PrefabInspector.h  TextureInspector.cpp  TextureInspector.h  VertexShaderInspector.cpp  VertexShaderInspector.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/Windows/WindowTypes/Inspector/World/: GameObjectInspector.cpp  GameObjectInspector.h
Source/EclipsedEngine/public/EclipsedEngine/Editor/Windows/WindowTypes/Settings/: BuildSettingsWindow.cpp  BuildSettingsWindow.h
Source/EclipsedEngine/public/EclipsedEngine/Reflection/: AbstractSerializedVariable.cpp  AbstractSerializedVariable.h  EditorReflectionDrawHelper.h  Reflection.cpp  Reflection.h  Reflection_Macros.h  SerializedVariable.inl
Source/EclipsedEngine/public/EclipsedEngine/Reflection/Registry/: ComponentRegistry.cpp  ComponentRegistry.h
Source/EclipsedEngine/public/EclipsedEngine/Replication/: ReplicatedVariable.cpp  ReplicatedVariable.h  ReplicatedVariable.inl  Replication.cpp  Replication.h  ReplicationManager.cpp  ReplicationManager.h  Replication_Macros.h
Source/EclipsedEngine/public/EclipsedEngine/Scenes/: SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SceneRegistry.cpp  SceneRegistry.h
Source/EclipsedEngine/public/EclipsedEngine/Steam/: SteamGeneral.cpp  SteamGeneral.h
Source/EclipsedEngine/public/EclipsedEngine/SubSystem/: SubSystem.h  SubSystemManager.cpp  SubSystemManager.h
Source/Launcher/: CMakeLists.txt  main.cpp
Source/Modules/AssetModule/: AssetModule.Core.hpp  CMakeLists.txt
Source/Modules/AudioModule/: AudioModule.Core.hpp  CMakeLists.txt
Source/Modules/CoreModule/: CMakeLists.txt  CoreModule.Core.hpp
Source/Modules/ECS/: CMakeLists.txt  ECS.Core.hpp
Source/Modules/InputModule/: CMakeLists.txt  InputModule.Core.hpp
Tools/Setup/: copy-engine-dlls.bat  copy-etc-files.bat  generate-engine-cmake.bat
(+245 files in other folders)
